@@ -48,9 +48,9 @@ function rv = mpver(varargin)
 % v{1} = ver(p);
 
 v{1} = struct(  'Name',     'MATPOWER', ... 
-                'Version',  '4.1', ...
+                'Version',  '4.1+', ...
                 'Release',  '', ...
-                'Date',     '14-Dec-2011' );
+                'Date',     '31-Jan-2012' );
 if nargout > 0
     if nargin > 0
         rv = v{1};
