@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+1/31/12
+    - Added utilities to help in working with networks with islands,
+      find_islands(), extract_islands() and connected_components()
+      and corresponding test file t/t_islands().
+
 1/24/12
     - Added option to makeJac() to return full Jacobian instead of
       reduced version used in Newton power flow updates.
